--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,13 @@ name: CI
 on:
   push:
     branches: [ master, rc, "feat/**", "fix/**" ]
+    paths-ignore:
+    - '.github/**'
+    
   pull_request:
     branches: [ master, rc ]
+    paths-ignore:
+    - '.github/**'
 
 jobs:
   build-test:
