chore(ci): fix auto-merge cascade and limit CI to master PRs (#52)
- run CI only for pull requests targeting master
- fix rc -> master auto-merge to use create-pull-request + gh auto-merge
- fix release -> rc auto-merge base/head parameters
- remove invalid merge/head inputs
- align workflows with final branch promotion model

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
     - '.github/**'
     
   pull_request:
-    branches: [ master, rc ]
+    branches: [ master ]
     paths-ignore:
     - '.github/**'
 
