--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,18 +2,21 @@ name: CI
 
 on:
   push:
-    branches: [ "feat/**", "fix/**" ]
+    branches:
+      - master
+      - feat/**
+      - fix/**
 
   pull_request:
     branches: [ master ]
 
 jobs:
   build-test:
+    if: github.event_name == 'pull_request'
     uses: ./.github/workflows/build-test.yml
 
   sonar:
-    if: github.event_name == 'pull_request'
-    needs: build-test
+    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     uses: ./.github/workflows/sonar.yml
     secrets:
       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
