--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -112,8 +112,8 @@ jobs:
       - name: Build & push Docker image (Release)
         uses: docker/build-push-action@v6
         with:
-          context: .
-          file: Dockerfile
+          context: ./PESEL.Examples.WebApi
+          file: ./PESEL.Examples.WebApi/Dockerfile
           push: true
           tags: |
             ghcr.io/asienicki/pesel:latest
