--- a/PESEL.Examples.WebApi/Dockerfile
+++ b/PESEL.Examples.WebApi/Dockerfile
@@ -1,4 +1,3 @@
-# Dockerfile (root repo)
 FROM mcr.microsoft.com/dotnet/aspnet:10.0 AS base
 WORKDIR /app
 EXPOSE 8080
@@ -8,12 +7,10 @@ ENV ASPNETCORE_FORWARDEDHEADERS_ENABLED=true
 FROM mcr.microsoft.com/dotnet/sdk:10.0 AS publish
 WORKDIR /src
 
-COPY ["PESEL.Examples.WebApi/PESEL.Examples.WebApi.csproj", "PESEL.Examples.WebApi/"]
-RUN dotnet restore "PESEL.Examples.WebApi/PESEL.Examples.WebApi.csproj"
+COPY ["PESEL.Examples.WebApi.csproj", "./"]
+RUN dotnet restore "PESEL.Examples.WebApi.csproj"
 
 COPY . .
-WORKDIR "/src/PESEL.Examples.WebApi"
-
 RUN dotnet publish "PESEL.Examples.WebApi.csproj" \
     -c Release \
     -o /app/publish \
