fix(docker): correctly scope APP_VERSION build arg to publish stage #73

--- a/PESEL.Examples.WebApi/Dockerfile
+++ b/PESEL.Examples.WebApi/Dockerfile
@@ -1,3 +1,5 @@
+ARG APP_VERSION
+
 FROM mcr.microsoft.com/dotnet/aspnet:10.0 AS base
 WORKDIR /app
 EXPOSE 8080
@@ -5,6 +7,7 @@ ENV ASPNETCORE_HTTP_PORTS=8080
 ENV ASPNETCORE_FORWARDEDHEADERS_ENABLED=true
 
 FROM mcr.microsoft.com/dotnet/sdk:10.0 AS publish
+ARG APP_VERSION
 WORKDIR /src
 
 COPY ["PESEL.Examples.WebApi.csproj", "./"]
@@ -13,6 +16,7 @@ RUN dotnet restore "PESEL.Examples.WebApi.csproj"
 COPY . .
 RUN dotnet publish "PESEL.Examples.WebApi.csproj" \
     -c Release \
+    /p:Version=$APP_VERSION \
     -o /app/publish \
     /p:UseAppHost=false
 
