--- a/.github/workflows/release-rc.yml
+++ b/.github/workflows/release-rc.yml
@@ -162,6 +162,8 @@ jobs:
           context: ./PESEL.Examples.WebApi
           file: ./PESEL.Examples.WebApi/Dockerfile
           push: true
+          build-args: |
+            APP_VERSION=${{ steps.version.outputs.version }}
           tags: |
             ghcr.io/asienicki/pesel:rc
             ghcr.io/asienicki/pesel:${{ steps.version.outputs.version }}
