fix(docker): correctly scope APP_VERSION build arg to publish stage - release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -115,6 +115,8 @@ jobs:
           context: ./PESEL.Examples.WebApi
           file: ./PESEL.Examples.WebApi/Dockerfile
           push: true
+          build-args: |
+            APP_VERSION=${{ steps.version.outputs.version }}
           tags: |
             ghcr.io/asienicki/pesel:latest
             ghcr.io/asienicki/pesel:${{ steps.version.outputs.version }}
