--- a/.github/workflows/release-rc.yml
+++ b/.github/workflows/release-rc.yml
@@ -159,8 +159,8 @@ jobs:
       - name: Build & push Docker image (RC)
         uses: docker/build-push-action@v6
         with:
-          context: ./PESEL.Examples.WebApi
-          file: ./PESEL.Examples.WebApi/Dockerfile
+          context: ./examples/PESEL.Examples.WebApi
+          file: ./examples/PESEL.Examples.WebApi/Dockerfile
           push: true
           build-args: |
             APP_VERSION=${{ steps.version.outputs.version }}
