#88 xml doc + md in solution

--- a/src/PESEL.FluentValidation/PESEL.FluentValidation.csproj
+++ b/src/PESEL.FluentValidation/PESEL.FluentValidation.csproj
@@ -17,6 +17,8 @@
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageTags>PESEL,validation,fluentvalidation,poland,identity</PackageTags>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<NoWarn>$(NoWarn);1591</NoWarn>
 	</PropertyGroup>
 
 	<!-- README -->
