--- a/src/PESEL.System.ComponentModel.DataAnnotations/PESEL.System.ComponentModel.DataAnnotations.csproj
+++ b/src/PESEL.System.ComponentModel.DataAnnotations/PESEL.System.ComponentModel.DataAnnotations.csproj
@@ -19,6 +19,8 @@
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageTags>PESEL,validation,dataannotations,poland,identity</PackageTags>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<NoWarn>$(NoWarn);1591</NoWarn>
 	</PropertyGroup>
 
 	<!-- README do paczki -->
