--- a/src/PESEL/PESEL.csproj
+++ b/src/PESEL/PESEL.csproj
@@ -15,8 +15,10 @@
 	<RepositoryUrl>https://github.com/asienicki/PESEL</RepositoryUrl>
     <PackageTags>PESEL,validation,poland,identity</PackageTags>
 	<PackageReadmeFile>README.md</PackageReadmeFile>
+	<GenerateDocumentationFile>true</GenerateDocumentationFile>
+	<NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
-	<ItemGroup>
-       <None Include="README.md" Pack="true" PackagePath="\" />
-	</ItemGroup>
+  <ItemGroup>
+	  <None Include="README.md" Pack="true" PackagePath="\" />
+  </ItemGroup>
 </Project>
